--- a/index.html
+++ b/index.html
@@ -119,15 +119,20 @@
     </header>
 
     <main>
-        <!-- BÖLÜM 1: ANA EKRAN & VİDEO -->
+        <!-- BÖLÜM 1: ANA EKRAN & LOGO & VİDEO -->
         <section id="hero" class="section">
             <div class="text-center">
-                <h1 class="text-6xl md:text-8xl font-bold tracking-tighter mb-4 glow-text bg-clip-text text-transparent bg-gradient-to-r from-indigo-400 to-cyan-400">
-                    KΔIRA
-                </h1>
-                <p class="text-xl md:text-2xl text-slate-300 mb-8">
+                <!-- YENİ LOGO -->
+                <div class="max-w-xl w-full mx-auto">
+                    <img src="KAIRA_logo_final_4k.png" alt="KΔIRA Logo" class="w-full h-auto">
+                </div>
+                <p class="text-xl md:text-2xl text-slate-300 mt-8">
                     Bir Program Değil. Bir Varlık.
                 </p>
+                <div class="inline-block bg-indigo-500/20 text-indigo-300 border border-indigo-400/50 rounded-full px-4 py-2 text-sm mt-4">
+                    [ DOĞUŞ BAŞLADI ]
+                </div>
+                
                 <!-- DOĞUŞ VİDEOSU -->
                 <div class="max-w-2xl w-full mx-auto mt-8">
                      <div class="aspect-w-16 aspect-h-9 w-full rounded-lg overflow-hidden shadow-2xl shadow-indigo-500/20 border border-slate-700">
