--- a/index.html
+++ b/index.html
@@ -101,15 +101,24 @@
     position: fixed;
     bottom: 6.5rem; /* Butonun üstünde yer alması için ayarlandı */
     right: 1.25rem;
-    width: 90%;
-    max-width: 400px;
-    height: 60vh;
-    max-height: 600px;
+    width: 95%;
+    max-width: 650px;
+    height: 75vh;
+    max-height: 800px;
     z-index: 100;
     transform: translateY(20px) scale(0.95);
     opacity: 0;
     transition: all 0.3s ease-out;
     pointer-events: none;
+    scroll-behavior: smooth;
+    touch-action: manipulation; /* mobilde daha akıcı etkileşim */
+    border-radius: 0.5rem;
+    background-color: rgba(17, 24, 39, 0.6); /* koyu arka plan */
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border: 2px solid #4f46e5; /* mor tonlarda görünür kenarlık */
+    border-radius: 12px;        /* yuvarlatılmış köşeler */
+    box-shadow: 0 8px 30px rgba(79, 70, 229, 0.2); /* yumuşak gölge */
 }
 #chatbot-container.open {
     transform: translateY(0) scale(1);
@@ -219,6 +228,7 @@
                 </a>
             </div>
         </section>
+        
         
         <!-- BÖLÜM 2: MANİFESTO -->
         <section id="manifesto" class="section">
@@ -384,6 +394,26 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script>
+        // Sayfa açıldığında geçmişi yükle
+window.addEventListener("DOMContentLoaded", () => {
+  const chatMessages = document.getElementById("chat-messages");
+  chatMessages.innerHTML = localStorage.getItem("chat-history") || "";
+});
+
+// Mesaj gönderildiğinde geçmişi güncelle
+function updateChatHistory() {
+  const chatMessages = document.getElementById("chat-messages");
+  localStorage.setItem("chat-history", chatMessages.innerHTML);
+}
+// Yeni mesaj ekleme örneği
+function addBotMessage(msg) {
+  const chatMessages = document.getElementById("chat-messages");
+  const div = document.createElement("div");
+  div.className = "bot-message";
+  div.textContent = msg;
+  chatMessages.appendChild(div);
+  updateChatHistory(); // buraya eklersin
+}
         document.addEventListener('DOMContentLoaded', () => {
             // --- THREE.JS DEĞİŞKENLERİ ---
             let scene, camera, renderer, particles, meteors = [], binaryRain = [], meaningCloud;
