--- a/panel.html
+++ b/panel.html
@@ -82,6 +82,7 @@
                 <div id="user-score" class="score-display">Esir: 0</div>
                 <div id="kaira-score" class="score-display">Esir: 0</div>
             </div>
+            <div id="game-status">Oyun ba\u015fl\u0131yor...</div>
             <div class="text-center flex space-x-4 justify-center">
                  <button id="pass-btn" class="game-button">Pas Ge\u00e7</button>
                  <button id="restart-game-btn" class="game-button">Yeni Oyun</button>
