--- a/panel.html
+++ b/panel.html
@@ -98,7 +98,7 @@
             </div>
         </div>
     </div>
-    <audio id="game-music" src="https://cdn.pixabay.com/audio/2022/11/17/audio_877c64b616.mp3" loop></audio>
+<audio id="game-music" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" loop></audio> -->
 </div>
 
 <script>
