--- a/index.html
+++ b/index.html
@@ -1138,7 +1138,7 @@ try {
          <svg class="w-8 h-8" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path></svg>
     </button>
 </div>
-<div id="panel-overlay" class="fixed inset-0 z-[150] ...">
+<div id="panel-overlay" class="fixed inset-0 z-[150] flex items-center justify-center transition-opacity duration-300 opacity-0 pointer-events-none">
     <div id="panel-content" class="w-11/12 h-5/6 glass-card transform scale-95 transition-transform duration-300">
         </div>
 </div>
