--- a/panel.html
+++ b/panel.html
@@ -95,7 +95,7 @@
             </div>
         </div>
     </div>
-<audio id="game-music" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" loop></audio> -->
+<audio id="game-music" src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" loop></audio>
 </div>
 
 <script>
